adding docs (sphinx) dir

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,8 +42,8 @@ autodoc_tree_excludes =
 [build_sphinx]
 builders = html,man
 all-files = 1
-source-dir = doc
-build-dir = doc/build
+source-dir = docs
+build-dir = docs/_build
 
 [wheel]
 universal = 1
