adding initial (stubbed) instance list

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,9 @@ packages =
 
 [entry_points]
 console_scripts =
-    atmosphere = atmosphere.main:main
+    atmo = atmosphere.main:main
 atmosphere.cli =
+    instance_list = atmosphere.instance:InstanceList
 
 [pbr]
 autodoc_tree_index_modules = True
