added behave4cmd0, setuptools_behave, and now passing first behave test

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,16 @@ console_scripts =
     atmo = atmosphere.main:main
 atmosphere.cli =
     instance_list = atmosphere.instance:InstanceList
+distutils.commands =
+    behave_test = setuptools_behave:behave_test
+
+[cmdclass]
+behave_test = behave_test
+
+[behave_test]
+format = progress
+tags = -@xfail
+args = features
 
 [pbr]
 autodoc_tree_index_modules = True
@@ -51,3 +61,6 @@ universal = 1
 
 [flake8]
 max-line-length = 120
+
+[aliases]
+test = pytest
