--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ cliff==2.7.0
 cmd2==0.7.3
 docutils==0.13.1
 flake8==3.3.0
+glob2==0.5
 imagesize==0.7.1
 Jinja2==2.9.6
+Mako==1.0.6
 MarkupSafe==1.0
 mccabe==0.6.1
 packaging==16.8
@@ -15,10 +17,14 @@ parse==1.8.0
 parse-type==0.3.4
 pbr==3.1.1
 prettytable==0.7.2
+py==1.4.34
 pycodestyle==2.3.1
 pyflakes==1.5.0
 Pygments==2.2.0
+PyHamcrest==1.9.0
 pyparsing==2.2.0
+pytest==3.1.2
+pytest-bdd==2.18.2
 pytz==2017.2
 PyYAML==3.12
 requests==2.14.2
