--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 alabaster==0.7.10
 appdirs==1.4.3
+astroid==1.5.3
 Babel==2.4.0
 behave==1.2.5
 cliff==2.7.0
 cmd2==0.7.3
+coverage==4.4.1
+coveralls==1.1
+docopt==0.6.2
 docutils==0.13.1
 flake8==3.3.0
 glob2==0.5
 imagesize==0.7.1
+isort==4.2.15
 Jinja2==2.9.6
+lazy-object-proxy==1.3.1
 Mako==1.0.6
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -22,9 +28,11 @@ pycodestyle==2.3.1
 pyflakes==1.5.0
 Pygments==2.2.0
 PyHamcrest==1.9.0
+pylint==1.7.2
 pyparsing==2.2.0
 pytest==3.1.2
 pytest-bdd==2.18.2
+pytest-cov==2.5.1
 pytz==2017.2
 PyYAML==3.12
 requests==2.14.2
@@ -32,3 +40,4 @@ six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.5.6
 stevedore==1.23.0
+wrapt==1.10.10
