updated pytest args

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,4 +66,4 @@ max-line-length = 120
 test = pytest
 
 [tool:pytest]
-addopts = --verbose --cov atmosphere --cov-report xml
+addopts = --verbose --cov atmosphere --cov-report xml --junit-xml pytest.xml
