initial api to hit atmosphere rest api with requests testing api using mock server

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ console_scripts =
     atmo = atmosphere.main:main
 atmosphere.cli =
     instance_list = atmosphere.instance:InstanceList
+    image_list = atmosphere.image:ImageList
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
@@ -60,7 +61,7 @@ build-dir = docs/_build
 universal = 1
 
 [flake8]
-max-line-length = 120
+max-line-length = 160
 
 [aliases]
 test = pytest
