added command-line piece of showing a single image

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ console_scripts =
 atmosphere.cli =
     instance_list = atmosphere.instance:InstanceList
     image_list = atmosphere.image:ImageList
+    image_show = atmosphere.image:ImageShow
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
