--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pyparsing==2.2.0
 pytest==3.1.2
 pytest-bdd==2.18.2
 pytest-cov==2.5.1
+pytest-logger==0.1.5
 pytz==2017.2
 PyYAML==3.12
 requests==2.14.2
