added provider functionality and tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,8 @@ atmosphere.cli =
     instance_list = atmosphere.instance:InstanceList
     image_list = atmosphere.image:ImageList
     image_show = atmosphere.image:ImageShow
+    provider_list = atmosphere.provider:ProviderList
+    provider_show = atmosphere.provider:ProviderShow
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
