added version and identities list/show

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,11 +33,14 @@ packages =
 console_scripts =
     atmo = atmosphere.main:main
 atmosphere.cli =
+    version = atmosphere.version:Version
     instance_list = atmosphere.instance:InstanceList
     image_list = atmosphere.image:ImageList
     image_show = atmosphere.image:ImageShow
     provider_list = atmosphere.provider:ProviderList
     provider_show = atmosphere.provider:ProviderShow
+    identity_list = atmosphere.identity:IdentityList
+    identity_show = atmosphere.identity:IdentityShow
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
