--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pytest==3.1.2
 pytest-bdd==2.18.2
 pytest-cov==2.5.1
 pytest-logger==0.1.5
+python-dateutil==2.6.1
 python-dotenv==0.6.4
 pytz==2017.2
 PyYAML==3.12
