added size list/show

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,8 @@ atmosphere.cli =
     provider_show = atmosphere.provider:ProviderShow
     identity_list = atmosphere.identity:IdentityList
     identity_show = atmosphere.identity:IdentityShow
+    size_list = atmosphere.size:SizeList
+    size_show = atmosphere.size:SizeShow
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
