added instance list/show

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ console_scripts =
 atmosphere.cli =
     version = atmosphere.version:Version
     instance_list = atmosphere.instance:InstanceList
+    instance_show = atmosphere.instance:InstanceShow
     image_list = atmosphere.image:ImageList
     image_show = atmosphere.image:ImageShow
     provider_list = atmosphere.provider:ProviderList
