added project create/list/show

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,10 +34,14 @@ console_scripts =
     atmo = atmosphere.main:main
 atmosphere.cli =
     version = atmosphere.version:Version
+    instance_actions = atmosphere.instance:InstanceActions
     instance_list = atmosphere.instance:InstanceList
     instance_show = atmosphere.instance:InstanceShow
     image_list = atmosphere.image:ImageList
     image_show = atmosphere.image:ImageShow
+    project_create = atmosphere.project:ProjectCreate
+    project_list = atmosphere.project:ProjectList
+    project_show = atmosphere.project:ProjectShow
     provider_list = atmosphere.provider:ProviderList
     provider_show = atmosphere.provider:ProviderShow
     identity_list = atmosphere.identity:IdentityList
