added volume list/show added allocation source list/show added instance create/actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,10 @@ console_scripts =
     atmo = atmosphere.main:main
 atmosphere.cli =
     version = atmosphere.version:Version
+    allocation_source_list = atmosphere.allocation_source:AllocationSourceList
+    allocation_source_show = atmosphere.allocation_source:AllocationSourceShow
     instance_actions = atmosphere.instance:InstanceActions
+    instance_create = atmosphere.instance:InstanceCreate
     instance_list = atmosphere.instance:InstanceList
     instance_show = atmosphere.instance:InstanceShow
     image_list = atmosphere.image:ImageList
@@ -48,6 +51,8 @@ atmosphere.cli =
     identity_show = atmosphere.identity:IdentityShow
     size_list = atmosphere.size:SizeList
     size_show = atmosphere.size:SizeShow
+    volume_list = atmosphere.volume:VolumeList
+    volume_show = atmosphere.volume:VolumeShow
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
