--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ celerybeat-schedule
 
 # dotenv
 .env
+.env.*
 
 # virtualenv
 venv/
@@ -93,3 +94,6 @@ ENV/
 
 # vscode
 .vscode/
+
+# test input
+input/
