--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ atmosphere.cli =
     instance_list = atmosphere.instance:InstanceList
     instance_show = atmosphere.instance:InstanceShow
     image_list = atmosphere.image:ImageList
+    image_search = atmosphere.image:ImageSearch
     image_show = atmosphere.image:ImageShow
     project_create = atmosphere.project:ProjectCreate
     project_list = atmosphere.project:ProjectList
@@ -51,6 +52,7 @@ atmosphere.cli =
     identity_show = atmosphere.identity:IdentityShow
     size_list = atmosphere.size:SizeList
     size_show = atmosphere.size:SizeShow
+    volume_create = atmosphere.volume:VolumeCreate
     volume_list = atmosphere.volume:VolumeList
     volume_show = atmosphere.volume:VolumeShow
 distutils.commands =
