added image version show and added version id's to image show

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ atmosphere.cli =
     image_list = atmosphere.image:ImageList
     image_search = atmosphere.image:ImageSearch
     image_show = atmosphere.image:ImageShow
+    image_version_show = atmosphere.image:ImageVersionShow
     project_create = atmosphere.project:ProjectCreate
     project_list = atmosphere.project:ProjectList
     project_show = atmosphere.project:ProjectShow
