upgraded cliff to v2.9.0 added a delete hook to enable confirmation added volume delete

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
 alabaster==0.7.10
 appdirs==1.4.3
+appnope==0.1.0
 astroid==1.5.3
 Babel==2.4.0
 behave==1.2.5
-cliff==2.7.0
+click==6.7
+cliff==2.9.0
 cmd2==0.7.3
 coverage==4.4.1
 coveralls==1.1
+decorator==4.1.2
 docopt==0.6.2
 docutils==0.13.1
 flake8==3.3.0
 glob2==0.5
 imagesize==0.7.1
 isort==4.2.15
+jedi==0.10.2
 Jinja2==2.9.6
 lazy-object-proxy==1.3.1
 Mako==1.0.6
@@ -22,7 +26,12 @@ packaging==16.8
 parse==1.8.0
 parse-type==0.3.4
 pbr==3.1.1
+pexpect==4.2.1
+pickleshare==0.7.4
+pluggy==0.4.0
 prettytable==0.7.2
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 py==1.4.34
 pycodestyle==2.3.1
 pyflakes==1.5.0
@@ -30,6 +39,7 @@ Pygments==2.2.0
 PyHamcrest==1.9.0
 pylint==1.7.2
 pyparsing==2.2.0
+pyperclip==1.5.27
 pytest==3.1.2
 pytest-bdd==2.18.2
 pytest-cov==2.5.1
@@ -39,9 +49,13 @@ python-dotenv==0.6.4
 pytz==2017.2
 PyYAML==3.12
 requests==2.14.2
+simplegeneric==0.8.1
 six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.5.6
 stevedore==1.23.0
 tox==2.7.0
+traitlets==4.3.2
+virtualenv==15.1.0
+wcwidth==0.1.7
 wrapt==1.10.10
