--- a/setup.cfg
+++ b/setup.cfg
@@ -54,8 +54,11 @@ atmosphere.cli =
     size_list = atmosphere.size:SizeList
     size_show = atmosphere.size:SizeShow
     volume_create = atmosphere.volume:VolumeCreate
+    volume_delete = atmosphere.volume:VolumeDelete
     volume_list = atmosphere.volume:VolumeList
     volume_show = atmosphere.volume:VolumeShow
+atmosphere.cli.volume_delete =
+    delete_hook = atmosphere.hooks.delete_hook:DeleteHook
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
