updated api request responses add instance suspend/resume

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,8 @@ atmosphere.cli =
     instance_create = atmosphere.instance:InstanceCreate
     instance_list = atmosphere.instance:InstanceList
     instance_show = atmosphere.instance:InstanceShow
+    instance_suspend = atmosphere.instance:InstanceSuspend
+    instance_resume = atmosphere.instance:InstanceResume
     image_list = atmosphere.image:ImageList
     image_search = atmosphere.image:ImageSearch
     image_show = atmosphere.image:ImageShow
@@ -85,7 +87,7 @@ build-dir = docs/_build
 universal = 1
 
 [flake8]
-max-line-length = 160
+max-line-length = 180
 
 [aliases]
 test = pytest
