--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ python-dotenv==0.6.4
 pytz==2017.2
 PyYAML==3.12
 requests==2.14.2
+responses==0.8.1
 simplegeneric==0.8.1
 six==1.10.0
 snowballstemmer==1.2.1
