updated list actions to use uuid instead of id added instance start/stop/reboot

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,9 @@ atmosphere.cli =
     instance_show = atmosphere.instance:InstanceShow
     instance_suspend = atmosphere.instance:InstanceSuspend
     instance_resume = atmosphere.instance:InstanceResume
+    instance_reboot = atmosphere.instance:InstanceReboot
+    instance_stop = atmosphere.instance:InstanceStop
+    instance_start = atmosphere.instance:InstanceStart
     image_list = atmosphere.image:ImageList
     image_search = atmosphere.image:ImageSearch
     image_show = atmosphere.image:ImageShow
