added instance shelve/unshelve added instance attach_volume/detach_volume

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,11 @@ atmosphere.cli =
     instance_reboot = atmosphere.instance:InstanceReboot
     instance_stop = atmosphere.instance:InstanceStop
     instance_start = atmosphere.instance:InstanceStart
+    instance_redeploy = atmosphere.instance:InstanceRedeploy
+    instance_shelve = atmosphere.instance:InstanceShelve
+    instance_unshelve = atmosphere.instance:InstanceUnshelve
+    instance_attach = atmosphere.instance:InstanceAttach
+    instance_detach = atmosphere.instance:InstanceDetach
     image_list = atmosphere.image:ImageList
     image_search = atmosphere.image:ImageSearch
     image_show = atmosphere.image:ImageShow
