updated behave4cmd added instance history

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ atmosphere.cli =
     instance_unshelve = atmosphere.instance:InstanceUnshelve
     instance_attach = atmosphere.instance:InstanceAttach
     instance_detach = atmosphere.instance:InstanceDetach
+    instance_history = atmosphere.instance:InstanceHistory
     image_list = atmosphere.image:ImageList
     image_search = atmosphere.image:ImageSearch
     image_show = atmosphere.image:ImageShow
