initial pipenv setup, updated tox and travis configs

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,12 @@
 [tox]
 envlist = py27, py36
 skip_missing_interpreters=True
+skipsdist=True
 
 [testenv]
-usedevelop=True
-commands = {envpython} setup.py test
-           {envpython} setup.py behave_test
-deps = -rrequirements.txt
-
+deps=pipenv
+passenv=HOME
+commands =
+    pipenv install --dev
+    pytest --verbose --cov atmosphere --cov-report xml --junit-xml pytest.xml
+    behave --tags=-@xfail --format=progress features
