--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ python:
     - "2.7"
     - "3.6"
 install:
-    - pip install -r requirements.txt
-    - pip install -e .
+    - pip install pipenv
+    - pipenv install --dev
 script:
-    - python setup.py pytest
-    - python setup.py behave_test
+    - pipenv run pytest --verbose --cov atmosphere --cov-report xml --junit-xml pytest.xml
+    - pipenv run behave --tags=-@xfail --format=progress features
 after_success:
     - coveralls
