added mock server to behave test added several behave feature tests

--- a/.gitignore
+++ b/.gitignore
@@ -40,12 +40,14 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
+.pytest_cache
 nosetests.xml
 coverage.xml
 *,cover
 .hypothesis/
 pylint.*
 pytest.xml
+behave_reports/
 
 # Translations
 *.mo
