--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,4 @@ passenv=HOME
 commands =
     pipenv install --dev
     pytest --verbose --cov atmosphere --cov-report xml --junit-xml pytest.xml
-    behave --tags=-@xfail --format=progress features
+    behave --tags=-@xfail --format=progress3 --junit --junit-directory behave_reports features
