implemented instance delete

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ atmosphere.cli =
     allocation_source_show = atmosphere.allocation_source:AllocationSourceShow
     instance_actions = atmosphere.instance:InstanceActions
     instance_create = atmosphere.instance:InstanceCreate
+    instance_delete = atmosphere.instance:InstanceDelete
     instance_list = atmosphere.instance:InstanceList
     instance_show = atmosphere.instance:InstanceShow
     instance_suspend = atmosphere.instance:InstanceSuspend
@@ -70,6 +71,8 @@ atmosphere.cli =
     volume_show = atmosphere.volume:VolumeShow
 atmosphere.cli.volume_delete =
     delete_hook = atmosphere.hooks.delete_hook:DeleteHook
+atmosphere.cli.instance_delete =
+    delete_hook = atmosphere.hooks.delete_hook:DeleteHook
 distutils.commands =
     behave_test = setuptools_behave:behave_test
 
@@ -96,7 +99,7 @@ build-dir = docs/_build
 universal = 1
 
 [flake8]
-max-line-length = 180
+max-line-length = 250
 
 [aliases]
 test = pytest
