added atmo image version list

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ atmosphere.cli =
     image_search = atmosphere.image:ImageSearch
     image_show = atmosphere.image:ImageShow
     image_version_show = atmosphere.image:ImageVersionShow
+    image_version_list = atmosphere.image:ImageVersionList
     project_create = atmosphere.project:ProjectCreate
     project_list = atmosphere.project:ProjectList
     project_show = atmosphere.project:ProjectShow
