--- a/setup.cfg
+++ b/setup.cfg
@@ -86,7 +86,7 @@ tags = -@xfail
 args = features
 
 [pbr]
-autodoc_tree_index_modules = True
+autodoc_tree_index_modules = False
 autodoc_tree_excludes =
     setup.py
 
