--- a/setup.cfg
+++ b/setup.cfg
@@ -64,12 +64,16 @@ atmosphere.cli =
     provider_show = atmosphere.provider:ProviderShow
     identity_list = atmosphere.identity:IdentityList
     identity_show = atmosphere.identity:IdentityShow
+    group_list = atmosphere.group:GroupList
+    group_show = atmosphere.group:GroupShow
     size_list = atmosphere.size:SizeList
     size_show = atmosphere.size:SizeShow
     volume_create = atmosphere.volume:VolumeCreate
     volume_delete = atmosphere.volume:VolumeDelete
     volume_list = atmosphere.volume:VolumeList
     volume_show = atmosphere.volume:VolumeShow
+    maintenance_record_list = atmosphere.maintenance_record:MaintenanceRecordList
+    maintenance_record_show = atmosphere.maintenance_record:MaintenanceRecordShow
 atmosphere.cli.volume_delete =
     delete_hook = atmosphere.hooks.delete_hook:DeleteHook
 atmosphere.cli.instance_delete =
