updated metadata in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = atmosphere_cli
 summary = A command-line interface for Atmosphere
-description-file = README.md
+description-file = README.rst
 author = Erik Ferlanti
 author-email = eferlanti@tacc.utexas.edu
 home-page = https://github.com/cyverse/atmosphere-cli
