--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,20 @@
 [metadata]
-name = atmosphere_cli
+name = atmosphere-cli
 summary = A command-line interface for Atmosphere
-description-file = README.md
+description-file = README.rst
 author = Erik Ferlanti
 author-email = eferlanti@tacc.utexas.edu
-home-page = https://github.com/cyverse/atmosphere-cli
+home-page = https://github.com/eriksf/atmosphere-cli
 license = LICENSE.txt
 classifier =
-    Development Status :: 3 - Alpha
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     Intended Audience :: System Administrators
     Intended Audience :: Information Technology
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
+    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Topic :: Software Development :: Libraries
