--- a/docker.env.sample
+++ b/docker.env.sample
@@ -1,4 +1,4 @@
-ATMO_BASE_URL=https://local.atmo.cloud/api/v2
+ATMO_BASE_URL=https://use.jetstream-cloud.org
 ATMO_AUTH_TOKEN=
 ATMO_API_SERVER_VERIFY_CERT=True
 ATMO_API_SERVER_TIMEOUT=
